--- a/mosquitto.conf
+++ b/mosquitto.conf
@@ -632,7 +632,7 @@
 # This option is also available as `auth_plugin`, but this use is deprecated
 # and will be removed in the future.
 #
-#plugin
+plugin /home/lorenzo/mosquitto_mod/plugins/payload-modification/mosquitto_payload_modification.so
 
 # If the plugin option above is used, define options to pass to the
 # plugin here as described by the plugin instructions. All options named
