--- a/plugins/msg-splitter/Makefile
+++ b/plugins/msg-splitter/Makefile
@@ -1,19 +1,29 @@
 include ../../config.mk
 
+PLUGIN_CPPFLAGS += -Icpp-modules/
+
 .PHONY : all binary check clean reallyclean test install uninstall
 
 PLUGIN_NAME=mosquitto_msg_splitter
+
+cpp-modules= cpp-modules/process.cpp
 
 all : binary
 
 binary : ${PLUGIN_NAME}.so
 
-${PLUGIN_NAME}.so : ${PLUGIN_NAME}.c
-	$(CROSS_COMPILE)$(CC) $(PLUGIN_CPPFLAGS) $(PLUGIN_CFLAGS) $(PLUGIN_LDFLAGS) -lyaml-cpp -fPIC -shared $< -o $@
+#$(foreach v, $(.VARIABLES), $(info $(v) = $($(v))))
+
+libmodules.a:$(cpp-modules)
+	$(CROSS_COMPILE)$(CXX) -static -static-libstdc++ -static-libgcc -fPIC -c $< -o $@
+
+
+${PLUGIN_NAME}.so : ${PLUGIN_NAME}.c libmodules.a 
+	$(CROSS_COMPILE)$(CC) $(PLUGIN_CPPFLAGS)  $(PLUGIN_CFLAGS) $(PLUGIN_LDFLAGS) -L. -lmodules -fPIC -shared $< -o $@
 
 reallyclean : clean
 clean:
-	-rm -f *.o ${PLUGIN_NAME}.so *.gcda *.gcno
+	-rm -f *.o ${PLUGIN_NAME}.so *.gcda *.gcno libmodules.a
 
 check: test
 test:
