implementing yaml loader, TODO C/C++ class traduction in struct, or smth similar

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "C_Cpp.default.compilerPath": "/usr/bin/g++",
     "files.associations": {
         "mosquitto_plugin.h": "c",
-        "logging_mosq.h": "c"
+        "logging_mosq.h": "c",
+        "optional": "cpp"
     },
     "C_Cpp.default.configurationProvider": "ms-vscode.makefile-tools"
 }
