removed useless prints

--- a/mosquitto.conf
+++ b/mosquitto.conf
@@ -481,7 +481,7 @@
 #log_type notice
 #log_type information
 
-log_type none
+#log_type none
 # If set to true, client connection and disconnection messages will be included
 # in the log.
 #connection_messages true
