trying to shove some milliseconds off from image splitting processing: changed from stb_image to lodepng -> 25% increase (from 450ms to 350ms on a 180kb image, splitting in 4 parts). Kinda slow, slower than Pillow on python, but it is what it is.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,7 +66,10 @@
         "iomanip": "cpp",
         "ranges": "cpp",
         "span": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "charconv": "cpp",
+        "chrono": "cpp",
+        "format": "cpp"
     },
     "C_Cpp.default.configurationProvider": "ms-vscode.makefile-tools"
 }
