--- a/mosquitto.conf
+++ b/mosquitto.conf
@@ -633,7 +633,7 @@ allow_anonymous true
 # This option is also available as `auth_plugin`, but this use is deprecated
 # and will be removed in the future.
 #
-#plugin /home/broker/MosquittoBroker/plugins/msg-splitter/mosquitto_msg_splitter.so
+plugin /home/lorenzo/mosquitto_mod/plugins/msg-splitter/mosquitto_msg_splitter.so
 
 # If the plugin option above is used, define options to pass to the
 # plugin here as described by the plugin instructions. All options named
